force-app/main/default/objects/IOM_Integration_Mapping__mdt/IOM_Integration_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>IOM Integration Mapping Records with CRM Objects to IOM sync nodes</description>
    <label>IOM Integration Mapping</label>
    <pluralLabel>IOM Integration Mappings</pluralLabel>
</CustomObject>