force-app/main/default/objects/IOM_Integration_Mapping__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>IOM Integration Mapping Active</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>