force-app/main/default/objects/IOM_Integration_Mapping__mdt/fields/Child_Node__c.field-meta.xml
<CustomField>
    <fullName>Child_Node__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Child Node in Integration Mapping Payload</description>
    <label>Child Node</label>
    <type>Checkbox</type>
</CustomField>