force-app/main/default/objects/IOM_Integration_Mapping__mdt/fields/CRM_Object__c.field-meta.xml
<CustomField>
    <fullName>CRM_Object__c</fullName>
    <description>CRM sObject to map with IOM payload</description>
    <label>CRM Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>IOM_Integration_Mappings</relationshipLabel>
    <relationshipName>IOM_Integration_Mappings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>