force-app/main/default/objects/IOM_Integration_Mapping__mdt/fields/CRM_Object_Field__c.field-meta.xml
<CustomField>
    <fullName>CRM_Object_Field__c</fullName>
    <description>CRM Object field API name</description>
    <inlineHelpText>Add field API Name like
For account name from opportunity add Account.Name
&amp; for Edition Name from add Edition__r.Name</inlineHelpText>
    <label>CRM Object Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>