force-app/main/default/objects/IOM_Integration_Mapping__mdt/fields/Filter_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Filter_Field_Value__c</fullName>
    <label>Filter Field Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>