force-app/main/default/objects/IOM_Integration_Mapping__mdt/fields/IOM_Node_Data_Length__c.field-meta.xml
<CustomField>
    <fullName>IOM_Node_Data_Length__c</fullName>
    <description>IOM payload Node maximum length</description>
    <label>IOM Node Data Length</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>