force-app/main/default/objects/IOM_Integration_Mapping__mdt/fields/IOM_Node_Name__c.field-meta.xml
<CustomField>
    <fullName>IOM_Node_Name__c</fullName>
    <description>IOM JSON Payload node name</description>
    <label>IOM Node Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>