force-app/main/default/objects/IOM_Integration_Mapping__mdt/fields/IOM_Node_Type__c.field-meta.xml
<CustomField>
    <fullName>IOM_Node_Type__c</fullName>
    <description>IOM payload node data type</description>
    <label>IOM Node Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
                <default>true</default>
                <label>Text</label>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Decimal</fullName>
            </value>
            <value>
                <fullName>Boolean</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Date/Time</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Text Area</fullName>
            </value>
            <value>
                <fullName>Long Text Area</fullName>
            </value>
            <value>
                <fullName>Rich Text Area</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>