force-app/main/default/objects/IOM_Integration_Mapping__mdt/fields/Record_Id_Filter_Field__c.field-meta.xml
<CustomField>
    <fullName>Record_Id_Filter_Field__c</fullName>
    <description>Incase of Opportunity/Amendment  use ID , for Opportunity Products &amp; OpportunityContactRole use OpportunityId</description>
    <label>Record Id Filter Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>