force-app/main/default/objects/IOM_Integration_Mapping__mdt/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>is node required for OMP payload</description>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>