force-app/main/default/objects/IOM_Integration_Mapping__mdt/fields/Static_Value__c.field-meta.xml
<CustomField>
    <fullName>Static_Value__c</fullName>
    <defaultValue>&apos;&apos;</defaultValue>
    <description>Static value for OMP payload node</description>
    <label>Static Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>