force-app/main/default/objects/IOM_Integration_Mapping__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of IOM Integration</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity Sync</fullName>
                <default>true</default>
                <label>Opportunity Sync</label>
            </value>
            <value>
                <fullName>Amendment Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>