force-app/main/default/objects/IOM_Integration_Mapping__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>Active__c</columns>
    <columns>IOM_Node_Name__c</columns>
    <columns>CRM_Object__c</columns>
    <columns>CRM_Object_Field__c</columns>
    <columns>Static_Value__c</columns>
    <columns>IOM_Node_Data_Length__c</columns>
    <columns>IOM_Node_Type__c</columns>
    <columns>Required__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>